Fix spacing (again*2)

--- a/pages/opus3/styles.css
+++ b/pages/opus3/styles.css
@@ -98,5 +98,5 @@ a{
 
 .links{
     display: flex;
-    margin-top: 2vw;
+    margin-top: 1.75vw;
 }
